change html root to match gh-pages

--- a/000_1-sds-3-x/004_RDDsTransformationsActions.html
+++ b/000_1-sds-3-x/004_RDDsTransformationsActions.html
@@ -54,6 +54,7 @@
         const thebe_selector_output = ".output"
     </script>
     <script async="async" src="../_static/sphinx-thebe.js"></script>
+    <link rel="canonical" href="ScaDaMaLe/000_1-sds-3-x/004_RDDsTransformationsActions.html" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="ScaDaMaLe, Scalable Data Science and Distributed Machine Learning" href="005_RDDsTransformationsActionsHOMEWORK.html" />
@@ -62,6 +63,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
 
+
+<!-- Opengraph tags -->
+<meta property="og:url"         content="ScaDaMaLe/000_1-sds-3-x/004_RDDsTransformationsActions.html" />
+<meta property="og:type"        content="article" />
+<meta property="og:title"       content="ScaDaMaLe, Scalable Data Science and Distributed Machine Learning" />
+<meta property="og:description" content="ScaDaMaLe, Scalable Data Science and Distributed Machine LearningIntroduction to Spark  Spark Essentials: RDDs, Transformations and Actions  This introductory n" />
+<meta property="og:image"       content="ScaDaMaLe/_static/logo.png" />
+
+<meta name="twitter:card" content="summary" />
 
 
   </head>
