--- a/notebooks.html
+++ b/notebooks.html
@@ -54,6 +54,7 @@
         const thebe_selector_output = ".output"
     </script>
     <script async="async" src="_static/sphinx-thebe.js"></script>
+    <link rel="canonical" href="ScaDaMaLe/notebooks.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="prev" title="ScaDaMaLe, Scalable Data Science and Distributed Machine Learning" href="000_1-sds-3-x/035_LDA_CornellMovieDialogs.html" />
@@ -61,6 +62,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
 
+
+<!-- Opengraph tags -->
+<meta property="og:url"         content="ScaDaMaLe/notebooks.html" />
+<meta property="og:type"        content="article" />
+<meta property="og:title"       content="Content with notebooks" />
+<meta property="og:description" content="Content with notebooks  You can also create content with Jupyter Notebooks. This means that you can include code blocks and their outputs in your book.  Markdow" />
+<meta property="og:image"       content="ScaDaMaLe/_static/logo.png" />
+
+<meta name="twitter:card" content="summary" />
 
 
   </head>
