--- a/000_1-sds-3-x/033_OBO_LoadExtract.html
+++ b/000_1-sds-3-x/033_OBO_LoadExtract.html
@@ -54,6 +54,7 @@
         const thebe_selector_output = ".output"
     </script>
     <script async="async" src="../_static/sphinx-thebe.js"></script>
+    <link rel="canonical" href="ScaDaMaLe/000_1-sds-3-x/033_OBO_LoadExtract.html" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Piped RDDs and Bayesian AB Testing" href="033_OBO_PipedRDD_RigorousBayesianABTesting.html" />
@@ -62,6 +63,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
 
+
+<!-- Opengraph tags -->
+<meta property="og:url"         content="ScaDaMaLe/000_1-sds-3-x/033_OBO_LoadExtract.html" />
+<meta property="og:type"        content="article" />
+<meta property="og:title"       content="ScaDaMaLe, Scalable Data Science and Distributed Machine Learning" />
+<meta property="og:description" content="ScaDaMaLe, Scalable Data Science and Distributed Machine LearningOld Bailey Online Data Analysis in Apache Spark  2016, by Raaz Sainudiin and James Smithies is " />
+<meta property="og:image"       content="ScaDaMaLe/_static/logo.png" />
+
+<meta name="twitter:card" content="summary" />
 
 
   </head>
