--- a/content.html
+++ b/content.html
@@ -54,12 +54,22 @@
         const thebe_selector_output = ".output"
     </script>
     <script async="async" src="_static/sphinx-thebe.js"></script>
+    <link rel="canonical" href="ScaDaMaLe/content.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
 
+
+<!-- Opengraph tags -->
+<meta property="og:url"         content="ScaDaMaLe/content.html" />
+<meta property="og:type"        content="article" />
+<meta property="og:title"       content="Content in Jupyter Book" />
+<meta property="og:description" content="Content in Jupyter Book  There are many ways to write content in Jupyter Book. This short section covers a few tips for how to do so." />
+<meta property="og:image"       content="ScaDaMaLe/_static/logo.png" />
+
+<meta name="twitter:card" content="summary" />
 
 
   </head>
