--- a/intro.html
+++ b/intro.html
@@ -54,12 +54,22 @@
         const thebe_selector_output = ".output"
     </script>
     <script async="async" src="_static/sphinx-thebe.js"></script>
+    <link rel="canonical" href="ScaDaMaLe/intro.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
 
+
+<!-- Opengraph tags -->
+<meta property="og:url"         content="ScaDaMaLe/intro.html" />
+<meta property="og:type"        content="article" />
+<meta property="og:title"       content="Welcome to your Jupyter Book" />
+<meta property="og:description" content="Welcome to your Jupyter Book  This is a small sample book to give you a feel for how book content is structured.  Check out the content pages bundled with this " />
+<meta property="og:image"       content="ScaDaMaLe/_static/logo.png" />
+
+<meta name="twitter:card" content="summary" />
 
 
   </head>
